[package]
name = "pyaerso"
version = "0.1.0"
edition = "2018"

[dependencies]
aerso = { path = "../aerso", features = ["constrain-qnorm-drift"] }

[dependencies.pyo3]
version = "0.15.0"

[features]
single-precision = ["aerso/single-precision"]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "pyaerso"
crate-type = ["cdylib"]
